--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,13 +15,15 @@
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "zone.js": "0.5.15",
+    "bootstrap": "3.3.6"
   },
   "devDependencies": {
     "typings":"^0.6.8",
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.12.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^4.3.3",
     "del": "^2.2.0",
     "browser-sync": "^2.11.1"
   }
