Configured npmStart task to be depended on npmInstall task in Gradle

--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -18,7 +18,7 @@ node {
 	workDir = file("${project.buildDir}/nodejs")
 }
 
-task npmStart(type: NpmTask) {
+task npmStart(type: NpmTask, dependsOn: npmInstall) {
 	args = ['start']
 }
 
