--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,28 +3,41 @@
   "version": "1.0.0",
   "scripts": {
     "start": "gulp serve",
+    "bundle": "gulp bundle",
     "gulp": "gulp",
     "typings": "typings",
     "postinstall": "typings install" 
   },
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.8",
-    "systemjs": "0.19.22",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.4",
+    "systemjs": "0.19.31",
+    "core-js": "2.4.1",
+    "reflect-metadata": "0.1.3",
+    "zone.js": "0.6.12",
     "bootstrap": "3.3.6"
   },
   "devDependencies": {
-    "typings":"^0.6.8",
+    "typings":"^1.3.1",
+    "tslint": "^3.13.0",
     "gulp": "^3.9.1",
-    "gulp-typescript": "^2.12.1",
+    "gulp-typescript": "^2.13.6",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^4.3.3",
-    "del": "^2.2.0",
-    "browser-sync": "^2.11.1"
+    "gulp-tslint": "^5.0.0",
+    "del": "^2.2.1",
+    "browser-sync": "^2.13.0",
+    "systemjs-builder": "^0.15.23",
+    "gulp-useref ": "^3.1.0",
+    "gulp-if": "^2.0.1",
+    "gulp-uglify": "^1.5.4"
   }
 }
